FIND_PACKAGE(Qt4 REQUIRED)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

IF (CMAKE_COMPILER_IS_GNUCXX)
   SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
   ADD_DEFINITIONS ( "-DNDEBUG" )
ENDIF (CMAKE_COMPILER_IS_GNUCXX)

INCLUDE_DIRECTORIES( ${QT_INCLUDE_DIR} )

SET(mandelbrot_SRCS
    mandelbrot.cpp
)

QT4_AUTOMOC(${mandelbrot_SRCS})

ADD_EXECUTABLE(mandelbrot ${mandelbrot_SRCS})

TARGET_LINK_LIBRARIES(mandelbrot ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
